--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -21,36 +21,42 @@
                 <div>
                     <input class="form-control" type="text" th:field="*{firstName}" id="name"/>
                 </div>
+                <div th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></div>
             </div>
             <div>
                 <label for="lastname">Last name: </label>
                 <div>
                     <input class="form-control" type="text" th:field="*{lastName}" id="lastname"/>
                 </div>
+                <div th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></div>
             </div>
             <div>
                 <label for="age">Age: </label>
                 <div>
                     <input class="form-control" type="number" th:field="*{age}" id="age"/>
                 </div>
+                <div th:if="${#fields.hasErrors('age')}" th:errors="*{age}"></div>
             </div>
             <div>
                 <label for="email">E-mail: </label>
                 <div>
                     <input class="form-control" type="email" th:field="*{email}" id="email"/>
                 </div>
+                <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
             </div>
             <div>
                 <label for="username">Username: </label>
                 <div>
                     <input class="form-control" type="text" th:field="*{username}" id="username"/>
                 </div>
+                <div th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
             </div>
             <div>
                 <label for="password">Password: </label>
                 <div>
                     <input class="form-control" type="password" th:field="*{password}" id="password"/>
                 </div>
+                <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
             </div>
             <div>
                 <label for="passwordconfirm">Password confirm: </label>
@@ -73,7 +79,6 @@
         </div>
     </form>
     <p><span th:text="${userIsExist}">User is exist</span></p>
-    <p><span th:text="${formError}">Form filling error</span></p>
 </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
