--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -89,13 +89,13 @@
                                             <div class="row m-0" style="background: white">
                                                 <div class="col p-3">
                                                     <div class="container text-center">
-                                                        <form id="registForm" method="POST" th:action="@{/admin}" th:object="${newUser}"
+                                                        <form id="registForm" method="POST" th:action="@{/admin}"
                                                               style="max-width: 300px; margin: 0 auto;">
                                                             <div class="m-3">
                                                                 <div>
                                                                     <label for="firstNameReg"><b>First name</b></label>
                                                                     <div>
-                                                                        <input class="form-control" type="text" th:field="*{firstName}"
+                                                                        <input class="form-control" type="text"
                                                                                id="firstNameReg"/>
                                                                     </div>
                                                                     <div class="validation" id="firstNameRegError"></div>
@@ -103,7 +103,7 @@
                                                                 <div>
                                                                     <label for="lastNameReg"><b>Last name</b></label>
                                                                     <div>
-                                                                        <input class="form-control" type="text" th:field="*{lastName}"
+                                                                        <input class="form-control" type="text"
                                                                                id="lastNameReg"/>
                                                                     </div>
                                                                     <div class="validation" id="lastNameRegError"></div>
@@ -111,7 +111,7 @@
                                                                 <div>
                                                                     <label for="ageReg"><b>Age</b></label>
                                                                     <div>
-                                                                        <input class="form-control" type="number" th:field="*{age}"
+                                                                        <input class="form-control" type="number"
                                                                                id="ageReg"/>
                                                                     </div>
                                                                     <div class="validation" id="ageRegError"></div>
@@ -119,7 +119,7 @@
                                                                 <div>
                                                                     <label for="emailReg"><b>E-mail</b></label>
                                                                     <div>
-                                                                        <input class="form-control" type="email" th:field="*{email}"
+                                                                        <input class="form-control" type="email"
                                                                                id="emailReg"/>
                                                                     </div>
                                                                     <div class="validation" id="emailRegError"></div>
@@ -127,7 +127,7 @@
                                                                 <div>
                                                                     <label for="usernameReg"><b>Username</b></label>
                                                                     <div>
-                                                                        <input class="form-control" type="text" th:field="*{username}"
+                                                                        <input class="form-control" type="text"
                                                                                id="usernameReg"/>
                                                                     </div>
                                                                     <div class="validation" id="usernameRegError"></div>
@@ -136,7 +136,7 @@
                                                                     <label for="passwordReg"><b>Password</b></label>
                                                                     <div>
                                                                         <input class="form-control" type="password"
-                                                                               th:field="*{password}" id="passwordReg"/>
+                                                                                id="passwordReg"/>
                                                                     </div>
                                                                     <div class="validation" id="passwordRegError"></div>
                                                                 </div>
@@ -144,7 +144,7 @@
                                                                     <label for="passwordConfirmReg"><b>Password confirm</b></label>
                                                                     <div>
                                                                         <input class="form-control" type="password"
-                                                                               th:field="*{passwordConfirm}" id="passwordConfirmReg"/>
+                                                                                id="passwordConfirmReg"/>
                                                                     </div>
                                                                     <div class="validation" id="userRegError"></div>
                                                                 </div>
@@ -156,6 +156,7 @@
                                                                             <option value="">USER</option>
                                                                         </select>
                                                                     </div>
+                                                                    <div class="validation" id="confirmRegError"></div>
                                                                 </div>
                                                                 <div>
                                                                     <input class="btn mt-3" style="background: #218838; border: #218838; color: white" type="submit" value="Add new user"/>
@@ -272,6 +273,7 @@
                                     <option value="">USER</option>
                                 </select>
                             </div>
+                            <div class="validation" id="confirmEditError"></div>
                         </div>
                     </div>
                 </div>
